--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,3 +25,13 @@ test: off
   
 artifacts:
   - path: Objectivity.TeamcityMaintenance
+
+deploy:
+  - provider: GitHub
+    auth_token: $(GithubAuthToken)
+    artifact: /.*\.zip/
+    draft: true
+    prerelease: false
+    on:
+      branch: master
+      appveyor_repo_tag: true
